syntax = "proto3";

package menu_category.v1;

import "google/protobuf/timestamp.proto";

// MenuCategoryService defines the gRPC service for managing menu categories.
service MenuCategoryService {
  // rpc to get full menu by language
  rpc GetFullMenuByLanguage(Language) returns (MenuCategoryListWithItems) {}
  // rpc to get menu categories by language
  rpc GetMenuCategoriesByLanguage(Language) returns (MenuCategoryList) {}
  // rpc to get a menu category by its ID
  rpc GetMenuCategoryById(Id) returns (MenuCategory) {}
  // rpc to create a new menu category
  rpc CreateMenuCategory(CreateMenuCategoryRequest) returns (MenuCategory) {}
  // rpc to update an existing menu category
  rpc UpdateMenuCategory(UpdateMenuCategoryRequest) returns (MenuCategory) {}
  // rpc to change the position of a menu category
  rpc ChangeMenuCategoryPosition(ChangeMenuCategoryPositionRequest) returns (MenuCategory) {}
  // rpc to delete a menu category by its ID
  rpc DeleteMenuCategory(Id) returns (StatusResponse) {}
}

// declaration of Language message
message Language {
  string language = 1;
}

// declaration of Id message
message Id {
  string id = 1;
}

// Message representing a list of menu categories
message MenuCategoryList {
  repeated MenuCategory data = 1;
}

// Message representing a list of menu categories with items
message MenuCategoryListWithItems {
  repeated MenuCategoryWithItems data = 1;
}

// Message representing a menu category
message MenuCategory {
  string id = 1;
  string language = 2;
  string title = 3;
  optional string description = 4;
  int32 position = 5;
  optional string image_url = 6;
  bool is_available = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message MenuItem {
  string id = 1;
  string title = 2;
  optional string description = 3;
  string price = 4;
  optional string image_url = 5;
  bool is_available = 6;
  int32 position = 7;
}

// Message representing a menu category with items
message MenuCategoryWithItems {
  string id = 1;
  string language = 2;
  string title = 3;
  optional string description = 4;
  int32 position = 5;
  optional string image_url = 6;
  bool is_available = 7;
  repeated MenuItem menu_items = 8;
}

// Request message for creating a menu category.
message CreateMenuCategoryRequest {
  string language = 1;
  string title = 2;
  optional string description = 3;
  optional string image_url = 4;
  optional bool is_available = 5;
}
// Request message for updating a menu category.
message UpdateMenuCategoryRequest {
  string id = 1;
  optional string language = 2;
  optional string title = 3;
  optional string description = 4;
  optional string image_url = 5;
  optional bool is_available = 6;
}
// Request message for changing the position of a menu category.
message ChangeMenuCategoryPositionRequest {
  string id = 1;
  int32 position = 2;
}
// Message representing a status response
message StatusResponse {
  bool success = 1;
  string message = 2;
}

// Command to generate TypeScript code with NestJS options
// protoc -I ./proto ./proto/menu-category.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true

// Command to generate TypeScript code with NestJS options, using null for optional fields and Date for timestamps
// protoc -I ./proto ./proto/menu-category.proto --ts_proto_out=./src/generated-types --ts_proto_opt=nestJs=true --ts_proto_opt=useNullAsOptional=true --ts_proto_opt=useDate=true